force-app/main/default/objects/Record_Criteria__c/Record_Criteria__c.object-meta.xml
<CustomObject>
    <label>Record Criteria</label>
    <nameField>
        <displayFormat>ARC-{000000}</displayFormat>
        <label>Record Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>