force-app/main/default/objects/Record_Criteria__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <referenceTo>Actions__c</referenceTo>
    <relationshipLabel>Record Criteria</relationshipLabel>
    <relationshipName>Record_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>